# librarian

./: .geminiignore  .gitignore  .golangci.yaml  .librarian.yaml  .typos.toml  CONTRIBUTING.md  Dockerfile  GEMINI.md  README.md  all_test.go  cloudbuild-exitgate-deprecated.yaml  cloudbuild-exitgate-dispatcher.yaml  cloudbuild-exitgate-release-container.yaml  cloudbuild-exitgate.yaml  cloudbuild-test.yaml  codecov.yml  container-structure-test.yaml  e2e_test.go  final-sdk.yaml  go.mod  go.sum  system_test.go
.gemini/: config.yaml  personas.md  styleguide.md
.gemini/kanban/: README.md  kanban
.gemini/prompts/: gemini-invoke.toml  gemini-plan-execute.toml  shared-context.md
.github/: CODEOWNERS
.github/workflows/: addlicense.yaml  create-issue-on-failure.yaml  dart.yaml  dotnet.yaml  gemini-dispatch.yml  gemini-invoke.yml  gemini-plan-execute.yml  golang.yaml  govulcheck.yaml.yml  govulncheck.yaml  java.yaml  librarian.yaml  librarianops.yaml  linter.yaml  multi_approvers.yaml  nodejs.yaml  python.yaml  rust.yaml  sidekick.yaml  typos.yaml
.librarian/: state.yaml
.louhi/: check_pr_status.go
cmd/: config_doc_generate.go  config_doc_generate_test.go  doc_generate.go  doc_generate_test.go
cmd/add_bazel_data/: main.go
cmd/add_go_bazel_data/: main.go
cmd/automation/: doc.go  main.go
cmd/convert_dart/: main.go
cmd/convert_go/: main.go
cmd/convert_go_state/: main.go
cmd/convert_python/: main.go
cmd/convert_sidekick/: main.go
cmd/expand_go_preserve_regex/: main.go
cmd/expand_go_regex/: main.go
cmd/expand_go_remove_regex/: main.go
cmd/gcloud/: main.go
cmd/legacyautomation/: doc.go  main.go
cmd/legacylibrarian/: doc.go  main.go
cmd/librarian/: Dockerfile  doc.go  doc_generate.go  doc_generate_test.go  main.go
cmd/librarianops/: doc.go  main.go
cmd/sideflip/: main.go
cmd/sidekick/: main.go
cmd/surfer/: main.go
design/: README.md  branches.md  catalog.yaml  cli.md  configuration.md  contributor.md  delete.md  engplan.md  freeze.md  generate.md  googleapis.md  librarian.yaml  librarianops.md  migrate.md  onboarding.md  release.md  rust.md  sdk.yaml  serviceconfig.yaml  test.md  tool.yaml  tools.md  tools.yaml
design/contributor/: python.md  rust.md
design/issues/: go-mod-dependency-updates.md  hotfix-workflow.md  multiple-runtimes.md  release-level-inference.md  release-ownership.md  staggered-release.md  unified-config.md
design/languages/: go.md  python.md  rust.md
doc/: alternatives-considered.md  api-allowlist-schema.md  cli-commands.md  config-schema.md  container.md  generate.md  howwewritego.md  language-onboarding.md  librarian-yaml.md  library-maintainer-guide.md  newconfig.md  onboarding.md  release.md  repository-library-onboarding.md  sdk-yaml-principles.md  sidekick-merge-strategy.md  state-schema.md  testing.md
doc/gcloud/: gcloud-declarative-schema.md  gcloud-yaml-schema.md
doc/legacylibrarian/: config-schema.md  language-onboarding.md  library-maintainer-guide.md  onboarding.md  repository-library-onboarding.md
infra/container/: run.sh
infra/dispatcher/: Dockerfile
infra/imagebuilders/: cloudbuild-exitgate-deprecated.yaml  cloudbuild-exitgate-dispatcher.yaml  cloudbuild-exitgate-release-container.yaml  cloudbuild-exitgate.yaml  cloudbuild-test.yaml  container-structure-test.yaml
infra/prod/: generate-worker.yaml  generate.yaml  publish-release-worker.yaml  publish-release.yaml  stage-release-worker.yaml  stage-release.yaml  update-image-worker.yaml  update-image.yaml
infra/test/: librarian-image-test.yaml  token-access-test.yaml
internal/automation/: automation.go  automation_test.go  cli.go  cli_test.go  cloudbuild_test.go  flags.go  generate.go  generate_test.go  help.go  publish_release.go  publish_release_test.go  repositories.go  repositories_test.go  stage_release.go  stage_release_test.go  trigger.go  trigger_test.go
internal/bazel/: baze_test.go
internal/cli/: cli.go  cli_test.go  version.go  version_test.go
internal/command/: command.go  command_test.go  configure.go  createreleaseartifacts.go  createreleasepr.go  generate.go  testhelpers.go  (+5 more)
internal/legacylibrarian/legacycontainer/java/testdata/generate/source/google/cloud/secretmanager/v1beta2/: BUILD.bazel  secretmanager_v1beta2.yaml
internal/legacylibrarian/legacycontainer/java/testdata/generate/source/google/cloud/workflows/v1/: BUILD.bazel
internal/librarian/rust/testdata/: Cargo.toml
internal/librarian/rust/testdata/new-lib-format/: Cargo.toml
internal/librarian/rust/testdata/new-lib-format/src/: main.rs
testdata/: e2e-test.Dockerfile  e2e_func.go
tool/cmd/importconfigs/testdata/googleapis/google/ads/admanager/v1/: BUILD.bazel
tool/cmd/importconfigs/testdata/googleapis/google/cloud/speech/v1/: BUILD.bazel
tool/cmd/importconfigs/testdata/googleapis/google/cloud/translate/v3/: BUILD.bazel
tool/cmd/importconfigs/testdata/test-update-rl/no-change-non-cloud-api/google/non-cloud/v1/: BUILD.bazel
tool/cmd/importconfigs/testdata/test-update-rne/add-cloud-api/google/cloud/workstations/v1/: BUILD.bazel
tool/cmd/importconfigs/testdata/test-update-rne/no-change-cloud-api/google/cloud/workstations/v1/: BUILD.bazel
tool/cmd/importconfigs/testdata/test-update-rne/no-change-non-cloud-api/google/non-cloud/v1/: BUILD.bazel
tool/cmd/migrate/testdata/googleapis/google/apps/script/type/: BUILD.bazel
tool/cmd/migrate/testdata/googleapis/google/bigtable/admin/v2/: BUILD.bazel
tool/cmd/migrate/testdata/googleapis/google/bigtable/v2/: BUILD.bazel
tool/cmd/migrate/testdata/googleapis/google/cloud/bigquery/connection/v1/: BUILD.bazel  bigqueryconnection_v1.yaml
tool/cmd/migrate/testdata/googleapis/google/cloud/compute/v1/: BUILD.bazel
tool/cmd/migrate/testdata/googleapis/google/cloud/multipygapic/: BUILD.bazel
tool/cmd/migrate/testdata/googleapis/google/cloud/speech/v1/: BUILD.bazel
tool/cmd/migrate/testdata/googleapis/google/cloud/translate/v3/: BUILD.bazel
tool/cmd/migrate/testdata/googleapis/google/storage/v2/: BUILD.bazel
tool/cmd/migrate/testdata/parse-bazel/complex-deps/google/cloud/aiplatform/v1/: BUILD.bazel
(+2855 files in other folders)
