# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = ["google-cloud-secretmanager-v1"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Google LLC"]
license = "Apache-2.0"
repository = "https://github.com/googleapis/google-cloud-rust/tree/main"
keywords = ["gcp", "google-cloud", "google-cloud-rust", "sdk"]
categories = ["network-programming"]
rust-version = "1.85.0"

[workspace.dependencies]
async-trait = "0.1"
bytes = "1"
gax = { version = "1", package = "google-cloud-gax" }
iam_v1 = { version = "1", package = "google-cloud-iam-v1" }
location = { version = "1", package = "google-cloud-location" }
reqwest = "0.12"
serde = "1"
serde_json = "1"
serde_with = "3"
time = "0.3"
wkt = { version = "1", package = "google-cloud-wkt" }
