# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

go_gapic_library(
    name = "bigtable_go_gapic",
    srcs = [":bigtable_proto_with_info"],
    grpc_service_config = "bigtable_grpc_service_config.json",
    importpath = "cloud.google.com/go/bigtable/apiv2;bigtable",
    rest_numeric_enums = True,
    service_yaml = "bigtable_v2.yaml",
    transport = "grpc",
    deps = [
        ":bigtable_go_proto",
    ],
)