go_gapic_library(
    name = "storage_go_gapic",
    srcs = [":storage_proto_with_info"],
    grpc_service_config = "storage_grpc_service_config.json",
    importpath = "cloud.google.com/go/storage/internal/apiv2;storage",
    metadata = True,
    rest_numeric_enums = True,
    service_yaml = "storage_v2.yaml",
    transport = "grpc",
    deps = [
        ":storage_go_proto",
        "//google/iam/v1:iam_go_proto",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
    ],
)