load("@com_google_googleapis_imports//:imports.bzl", "nodejs_gapic_assembly_pkg", "nodejs_gapic_library")

nodejs_gapic_library(
    name = "speech_nodejs_gapic",
    package_name = "@google-cloud/speech",
    src = ":speech_proto_with_info",
    package = "google.cloud.speech.v1",
    service_yaml = "speech_v1.yaml",
    transport = "grpc+rest",
    deps = [],
)
