csharp_gapic_library(
    rest_numeric_enums = False,
)

go_gapic_library(
    rest_numeric_enums = False,
)

java_gapic_library(
    rest_numeric_enums = True,
)

nodejs_gapic_library(
    rest_numeric_enums = True,
)

php_gapic_library(
    rest_numeric_enums = True,
)

py_gapic_library(
    rest_numeric_enums = True,
)

ruby_cloud_gapic_library(
    rest_numeric_enums = True,
)
