proto_library(
    name = "type_proto",
    srcs = [
        "addon_widget_set.proto",
        "extension_point.proto",
        "script_manifest.proto",
    ],
    deps = [
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

java_proto_library(
    name = "type_java_proto",
    deps = [":type_proto"],
)

java_grpc_library(
    name = "type_java_grpc",
    srcs = [":type_proto"],
    deps = [":type_java_proto"],
)

# Please DO-NOT-REMOVE this section.
# This is required to generate java files for these protos.
# Open Source Packages
java_gapic_assembly_gradle_pkg(
    name = "google-apps-script-type-java",
    transport = "grpc+rest",
    deps = [
        ":type_java_grpc",
        ":type_java_proto",
        ":type_proto",
    ],
)