# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

proto_library(
    name = "type_proto",
    srcs = [
        "addon_widget_set.proto",
        "extension_point.proto",
        "script_manifest.proto",
    ],
    deps = [
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

java_proto_library(
    name = "type_java_proto",
    deps = [":type_proto"],
)

java_grpc_library(
    name = "type_java_grpc",
    srcs = [":type_proto"],
    deps = [":type_java_proto"],
)

# Please DO-NOT-REMOVE this section.
# This is required to generate java files for these protos.
# Open Source Packages
java_gapic_assembly_gradle_pkg(
    name = "google-apps-script-type-java",
    transport = "grpc+rest",
    deps = [
        ":type_java_grpc",
        ":type_java_proto",
        ":type_proto",
    ],
)