go_gapic_library(
    name = "admin_go_gapic",
    srcs = [":admin_proto_with_info"],
    grpc_service_config = "bigtableadmin_grpc_service_config.json",
    importpath = "cloud.google.com/go/bigtable/admin/apiv2;admin",
    rest_numeric_enums = True,
    service_yaml = "bigtableadmin_v2.yaml",
    transport = "grpc",
    deps = [
        ":admin_go_proto",
        "//google/iam/v1:iam_go_proto",
        "//google/longrunning:longrunning_go_proto",
        "@com_google_cloud_go_longrunning//:go_default_library",
        "@com_google_cloud_go_longrunning//autogen:go_default_library",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
    ],
)