# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

##############################################################################
# Go
##############################################################################
load(
    "@com_google_googleapis_imports//:imports.bzl",
    "go_gapic_assembly_pkg",
    "go_gapic_library",
    "go_grpc_library",
)

go_grpc_library(
    name = "compute_go_proto",
    importpath = "cloud.google.com/go/compute/apiv1/computepb",
    protos = [":compute_proto"],
    deps = [
        "//google/api:annotations_go_proto",
        "//google/cloud:extended_operations_go_proto",
    ],
)

go_gapic_library(
    name = "compute_go_gapic",
    srcs = [":compute_proto_with_info"],
    diregapic = True,
    grpc_service_config = "compute_grpc_service_config.json",
    importpath = "cloud.google.com/go/compute/apiv1;compute",
    metadata = True,
    release_level = "ga",
    rest_numeric_enums = False,
    service_yaml = "compute_v1.yaml",
    transport = "rest",
    deps = [
        ":compute_go_proto",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
    ],
)

# Open Source Packages
go_gapic_assembly_pkg(
    name = "gapi-cloud-compute-v1-go",
    deps = [
        ":compute_go_gapic",
        ":compute_go_gapic_srcjar-metadata.srcjar",
        ":compute_go_gapic_srcjar-snippets.srcjar",
        ":compute_go_gapic_srcjar-test.srcjar",
        ":compute_go_proto",
    ],
)