load("@com_google_googleapis_imports//:imports.bzl", "nodejs_gapic_assembly_pkg", "nodejs_gapic_library")

nodejs_gapic_library(
    name = "speech_nodejs_gapic",
    package_name = "@google-cloud/speech",
    src = ":speech_proto_with_info",
    extra_protoc_parameters = ["metadata"],
    grpc_service_config = "speech_grpc_service_config.json",
    package = "google.cloud.speech.v1",
    rest_numeric_enums = True,
    service_yaml = "speech_v1.yaml",
    transport = "grpc+rest",
    deps = [],
)
