# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_google_googleapis_imports//:imports.bzl", "nodejs_gapic_assembly_pkg", "nodejs_gapic_library")

nodejs_gapic_library(
    name = "speech_nodejs_gapic",
    package_name = "@google-cloud/speech",
    src = ":speech_proto_with_info",
    extra_protoc_parameters = ["metadata"],
    grpc_service_config = "speech_grpc_service_config.json",
    package = "google.cloud.speech.v1",
    rest_numeric_enums = True,
    service_yaml = "speech_v1.yaml",
    transport = "grpc+rest",
    deps = [],
)
