load(
    "@com_google_googleapis_imports//:imports.bzl",
    "nodejs_gapic_assembly_pkg",
    "nodejs_gapic_library",
)

nodejs_gapic_library(
    name = "translate_nodejs_gapic",
    package_name = "@google-cloud/translate",
    src = ":translate_proto_with_info",
    bundle_config = "google/cloud/translate/v3/translate_gapic.yaml",
    extra_protoc_parameters = [
        "metadata",
        "auto-populate-field-oauth-scope",
    ],
    grpc_service_config = "translate_grpc_service_config.json",
    handwritten_layer = True,
    main_service = "translate",
    mixins = "none",
    package = "google.cloud.translate.v3",
    rest_numeric_enums = True,
    service_yaml = "translate_v3.yaml",
    transport = "grpc+rest",
    deps = [],
)

nodejs_gapic_assembly_pkg(
    name = "translate-v3-nodejs",
    deps = [
        ":translate_nodejs_gapic",
        ":translate_proto",
    ],
)
