# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(
    "@com_google_googleapis_imports//:imports.bzl",
    "nodejs_gapic_assembly_pkg",
    "nodejs_gapic_library",
)

java_gapic_library(
    name = "translation_java_gapic",
    srcs = [":translation_proto_with_info"],
    gapic_yaml = None,
    grpc_service_config = "translate_grpc_service_config.json",
    rest_numeric_enums = True,
    service_yaml = "translate_v3.yaml",
    test_deps = [
        ":translation_java_grpc",
        "//google/cloud/location:location_java_grpc",
    ],
    transport = "grpc+rest",
    deps = [
        ":translation_java_proto",
        "//google/api:api_java_proto",
        "//google/iam/v1:iam_java_proto",
    ],
)

java_gapic_assembly_gradle_pkg(
    name = "google-cloud-translation-v3-java",
    include_samples = True,
    transport = "grpc+rest",
    deps = [
        ":translation_java_gapic",
        ":translation_java_grpc",
        ":translation_java_proto",
        ":translation_proto",
    ],
)

nodejs_gapic_library(
    name = "translate_nodejs_gapic",
    package_name = "@google-cloud/translate",
    src = ":translate_proto_with_info",
    bundle_config = "google/cloud/translate/v3/translate_gapic.yaml",
    extra_protoc_parameters = [
        "metadata",
        "auto-populate-field-oauth-scope",
    ],
    grpc_service_config = "translate_grpc_service_config.json",
    handwritten_layer = True,
    main_service = "translate",
    mixins = "none",
    package = "google.cloud.translate.v3",
    rest_numeric_enums = True,
    service_yaml = "translate_v3.yaml",
    transport = "grpc+rest",
    deps = [],
)

nodejs_gapic_assembly_pkg(
    name = "translate-v3-nodejs",
    deps = [
        ":translate_nodejs_gapic",
        ":translate_proto",
    ],
)
