csharp_gapic_library(
    rest_numeric_enums = False,
)

go_gapic_library(
    rest_numeric_enums = False,
)

java_gapic_library(
    rest_numeric_enums = False,
)

nodejs_gapic_library(
    rest_numeric_enums = False,
)

php_gapic_library(
    rest_numeric_enums = False,
)

py_gapic_library(
    rest_numeric_enums = False,
)

ruby_cloud_gapic_library(
    rest_numeric_enums = False,
)
