# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

java_proto_library(
    name = "workflows_java_proto",
    deps = [":workflows_proto"],
)

java_grpc_library(
    name = "workflows_java_grpc",
    srcs = [":workflows_proto"],
    deps = [":workflows_java_proto"],
)

java_gapic_library(
    name = "workflows_java_gapic",
    srcs = [":workflows_proto_with_info"],
    grpc_service_config = "workflows_grpc_service_config.json",
    rest_numeric_enums = True,
    service_yaml = "workflows_v1.yaml",
    test_deps = [
        "//google/cloud/location:location_java_grpc",
        ":workflows_java_grpc",
    ],
    transport = "grpc+rest",
    deps = [
        ":workflows_java_proto",
        "//google/api:api_java_proto",
        "//google/cloud/location:location_java_proto",
    ],
)

java_gapic_test(
    name = "workflows_java_gapic_test_suite",
    test_classes = [
        "com.google.cloud.workflows.v1.WorkflowsClientHttpJsonTest",
        "com.google.cloud.workflows.v1.WorkflowsClientTest",
    ],
    runtime_deps = [":workflows_java_gapic_test"],
)

# Open Source Packages
java_gapic_assembly_gradle_pkg(
    name = "google-cloud-workflows-v1-java",
    include_samples = True,
    transport = "grpc+rest",
    deps = [
        ":workflows_java_gapic",
        ":workflows_java_grpc",
        ":workflows_java_proto",
        ":workflows_proto",
    ],
)